--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc",
-    "prestart": "npm run build",
-    "start": "node .",
+    "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+    "copy": "ts-node /tools",
+    "build": "npm-run-all clean lint tsc copy",
+    "start": "nodemon --watch ./index.ts",
+    "clean": "rimraf dist/*",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +18,11 @@
     "express": "^4.16.4"
   },
   "devDependencies": {
+    "@types/express": "^4.16.1",
+    "nodemon": "^1.18.9",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^2.6.3",
+    "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
     "typescript": "^3.3.1"
   }
