--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,15 @@
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
-    "target": "es6",
+    "target": "es5",
     "noImplicitAny": true,
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
+    "typeRoots": [
+      "./types"
+    ],
     "paths": {
       "*": [
         "node_modules/*"
@@ -16,5 +19,9 @@
   },
   "include": [
     "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
   ]
 }
